# LangArena

./: .env  .gitignore  LICENSE  README.md  all_run_local  all_test_local  benchmarks.rb  build-docker.sh  build.gradle.kts  clear_cache.sh  docker-compose.yaml  fmt  pc_specs.py  run  run.js  run.txt  test  test.js  test.txt  xtime.rb
c/: .gitignore  build-deps.sh  deps.sh  fetch-deps.sh  fmt  main.c  run  test
clojure/: deps.edn  run  test
cpp/: .gitignore  build-deps.sh  deps.sh  fetch-deps.sh  fmt  main.cpp  run  test
crystal/: fmt  main.cr  run  shard.yml  test
csharp/: .gitignore  AStarPathfinder.cs  BWTHuffDecode.cs  BWTHuffEncode.cs  Base64Decode.cs  Base64Encode.cs  Benchmark.csproj  BenchmarkBase.cs  Binarytrees.cs  BrainfuckArray.cs  BrainfuckHashMap.cs  BrainfuckRecursion.cs  BufferHashBenchmark.cs  BufferHashCRC32.cs  BufferHashSHA256.cs  CacheSimulation.cs  CalculatorAst.cs  CalculatorInterpreter.cs  Compress.cs  Compression.cs  CsvParse.cs  Decompression.cs  Distance.cs  Fannkuchredux.cs  Fasta.cs  GameOfLife.cs  GraphPath.cs  GraphPathBFS.cs  GraphPathBenchmark.cs  (+36 more)
d/: fmt  (+4 more)
rust/: Cargo.toml  fmt  node-wasi-runner.js  run  test  wasm
rust/src/: helper.rs  main.rs
rust/src/benchmarks/: a_star_pathfinder.rs  base64_decode.rs  base64_encode.rs  binarytrees.rs  brainfuck_array.rs  brainfuck_hashmap.rs  brainfuck_recursion.rs  buffer_hash_benchmark.rs  buffer_hash_crc32.rs  buffer_hash_sha256.rs  bwthuff.rs  cache_simulation.rs  calculator_ast.rs  calculator_interpreter.rs  compress.rs  compression.rs  csv_parse.rs  distance.rs  fannkuchredux.rs  fasta.rs  game_of_life.rs  graph_path.rs  graph_path_benchmark.rs  graph_path_bfs.rs  graph_path_dfs.rs  graph_path_dijkstra.rs  json_generate.rs  json_parse_dom.rs  json_parse_mapping.rs  knuckeotide.rs  log_parser.rs  mandelbrot.rs  matmul.rs  matmul16t.rs  matmul1t.rs  matmul4t.rs  matmul8t.rs  maze.rs  maze_generator.rs  mod.rs  (+16 more)
(+715 files in other folders)
