[package]
name = "benchmarks"
version = "0.1.0"
edition = "2021"
license = "MIT"

[profile.wmo]
inherits = "release"
opt-level = 3
codegen-units = 1

[profile.no-checks]
inherits = "release"
opt-level = 3
codegen-units = 1
overflow-checks = false
# ⚠️ ВНИМАНИЕ: Проверки переполнения отключены!
# Использовать только для внутренних тестов производительности

[profile.max-perf]
inherits = "release"
opt-level = 3
lto = "fat"
codegen-units = 1
overflow-checks = false
panic = "abort"
strip = "symbols"
debug = false
incremental = false
# Дополнительно (опционально):
# codegen-backend = "llvm"
# debug-assertions = false

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
num-bigint = "0.4"
num-traits = "0.2"
regex = "1.12"  # для RegexDna бенчмарка
once_cell = "1.18"  # для ленивой инициализации статических данных
tokio = { version = "1", features = ["full", "sync"] }  # для корутин
base64 = "0.22"  # для кодирования/декодирования base64
lru = "0.16.3"
rayon = "1.11"

[[bin]]
name = "benchmarks"
path = "src/main.rs"
