[package]
name = "benchmarks"
version = "0.1.0"
edition = "2021"
license = "MIT"

[profile.wmo]
inherits = "release"
opt-level = 3
codegen-units = 1

[profile.no-checks]
inherits = "release"
opt-level = 3
codegen-units = 1
overflow-checks = false

[profile.max-perf]
inherits = "release"
opt-level = 3
lto = "fat"
codegen-units = 1
overflow-checks = false
panic = "abort"
strip = "symbols"
debug = false
incremental = false

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
num-bigint = "0.4"
num-traits = "0.2"
regex = "1.12"
once_cell = "1.18"
tokio = { version = "1", features = ["full", "sync"] }
base64 = "0.22"
lru = "0.16.3"
rayon = "1.11"

[[bin]]
name = "benchmarks"
path = "src/main.rs"
